# blueprints

./: .gitignore  README.md  TODO.md  package-lock.json  package.json  tsconfig.base.json
.github/workflows/: ci.yml  publish.yml
blueprints/agents/: blueprint.json
blueprints/chat/: blueprint.json
blueprints/collab/: blueprint.json
blueprints/dash/: blueprint.json
blueprints/feed/: blueprint.json
blueprints/iot/: blueprint.json
blueprints/legacy/remote-terminal-python/: blueprint.json  pyproject.toml
blueprints/legacy/remote-terminal-python/remote_terminal/: __init__.py  main.py  nolag_client.py  protocol.py  session.py
blueprints/notify/: blueprint.json
blueprints/queue/: blueprint.json
blueprints/signal/: blueprint.json
docs/: AGENTS-PROTOCOL.md
go/iot/: go.mod  (+13 more)
js/: rollup.shared.js
python/agents/: README.md  integration_test.py  pyproject.toml
python/agents/nolag_agents/: __init__.py  agent_room.py  client.py  constants.py  correlation.py  envelope.py  errors.py  event_emitter.py  types.py  utils.py
python/agents/nolag_agents/patterns/: __init__.py  approve.py  blackboard.py  handoff.py  inbox.py  observe.py  tools.py
python/agents/tests/: conftest.py  test_agent_room.py  test_client.py  test_correlation.py  test_envelope.py  test_event_emitter.py
python/agents/tests/patterns/: test_approve.py  test_blackboard.py  test_handoff.py  test_inbox.py  test_observe.py  test_persistent_presence.py  test_tools.py
python/signal/: README.md  pyproject.toml
python/signal/nolag_signal/: __init__.py  constants.py  event_emitter.py  peer_manager.py  signal_client.py  signal_room.py  types.py
python/signal/nolag_signal.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+347 files in other folders)
