[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nolag-agents"
version = "0.3.1"
description = "Multi-agent coordination SDK for NoLag - handoff, blackboard, inbox, tools, approval, observe patterns"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = ["nolag>=2.2.1"]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "pytest-asyncio>=0.21.0"]

[tool.setuptools.packages.find]
include = ["nolag_agents*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
