[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nolag-signal"
version = "0.1.1"
description = "WebRTC signaling SDK built on NoLag"
requires-python = ">=3.10"
dependencies = ["nolag>=2.5.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "pytest-asyncio>=0.21.0"]

[tool.setuptools.packages.find]
include = ["nolag_signal*"]
